_generated-doc/3.6/config/quarkus-kafka-client.adoc

:summaryTableId: quarkus-kafka-client
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-client_configuration]]link:#quarkus-kafka-client_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.health.enabled]]`link:#quarkus-kafka-client_quarkus.kafka.health.enabled[quarkus.kafka.health.enabled]`


[.description]
--
Whether a health check is published in case the smallrye-health extension is present.

If you enable the health check, you must specify the `kafka.bootstrap.servers` property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_HEALTH_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_HEALTH_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.snappy.enabled]]`link:#quarkus-kafka-client_quarkus.kafka.snappy.enabled[quarkus.kafka.snappy.enabled]`


[.description]
--
Whether to enable Snappy in native mode.

Note that Snappy requires GraalVM 21{plus} and embeds a native library in the native executable. This library is unpacked and loaded when the application starts.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_SNAPPY_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_SNAPPY_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.enabled]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.enabled[quarkus.kafka.devservices.enabled]`


[.description]
--
If Dev Services for Kafka has been explicitly enabled or disabled. Dev Services are generally enabled by default, unless there is an existing configuration present. For Kafka, Dev Services starts a broker unless `kafka.bootstrap.servers` is set or if all the Reactive Messaging Kafka channel are configured with a `bootstrap.servers`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.port]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.port[quarkus.kafka.devservices.port]`


[.description]
--
Optional fixed port the dev service will listen to.

If not defined, the port will be chosen randomly.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.provider]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.provider[quarkus.kafka.devservices.provider]`


[.description]
--
Kafka dev service container type.

Redpanda, Strimzi and kafka-native container providers are supported. Default is redpanda.

For Redpanda: See https://vectorized.io/docs/quick-start-docker/ and https://hub.docker.com/r/vectorized/redpanda

For Strimzi: See https://github.com/strimzi/test-container and https://quay.io/repository/strimzi-test-container/test-container

For Kafka Native: See https://github.com/ozangunalp/kafka-native and https://quay.io/repository/ogunalp/kafka-native

Note that Strimzi and Kafka Native images are launched in Kraft mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_PROVIDER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_PROVIDER+++`
endif::add-copy-button-to-env-var[]
-- a|
`redpanda`, `strimzi`, `kafka-native` 
|`redpanda`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.image-name]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.image-name[quarkus.kafka.devservices.image-name]`


[.description]
--
The Kafka container image to use.

Dependent on the provider.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.shared]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.shared[quarkus.kafka.devservices.shared]`


[.description]
--
Indicates if the Kafka broker managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kafka starts a new container.

The discovery uses the `quarkus-dev-service-kafka` label. The value is configured using the `service-name` property.

Container sharing is only used in dev mode.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.service-name]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.service-name[quarkus.kafka.devservices.service-name]`


[.description]
--
The value of the `quarkus-dev-service-kafka` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Kafka looks for a container with the `quarkus-dev-service-kafka` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise, it starts a new container with the `quarkus-dev-service-kafka` label set to the specified value.

This property is used when you need multiple shared Kafka brokers.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`kafka`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.topic-partitions-timeout]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.topic-partitions-timeout[quarkus.kafka.devservices.topic-partitions-timeout]`


[.description]
--
Timeout for admin client calls used in topic creation.

Defaults to 2 seconds.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_TOPIC_PARTITIONS_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_TOPIC_PARTITIONS_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`2S`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.redpanda.transaction-enabled]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.redpanda.transaction-enabled[quarkus.kafka.devservices.redpanda.transaction-enabled]`


[.description]
--
Enables transaction support. Also enables the producer idempotence. Find more info about Red Panda transaction support on link:https://vectorized.io/blog/fast-transactions/[https://vectorized.io/blog/fast-transactions/]. Notice that link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-447%3A+Producer+scalability+for+exactly+once+semantics[KIP-447 (producer scalability for exactly once semantic)] and link:https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=89068820[KIP-360 (Improve reliability of idempotent/transactional producer)] are _not_ supported.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_REDPANDA_TRANSACTION_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_REDPANDA_TRANSACTION_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.topic-partitions-topic-partitions]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.topic-partitions-topic-partitions[quarkus.kafka.devservices.topic-partitions]`


[.description]
--
The topic-partition pairs to create in the Dev Services Kafka broker. After the broker is started, given topics with partitions are created, skipping already existing topics. For example, `quarkus.kafka.devservices.topic-partitions.test=2` will create a topic named `test` with 2 partitions.

The topic creation will not try to re-partition existing topics with different number of partitions.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_TOPIC_PARTITIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_TOPIC_PARTITIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Integer>` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-client_quarkus.kafka.devservices.container-env-container-env]]`link:#quarkus-kafka-client_quarkus.kafka.devservices.container-env-container-env[quarkus.kafka.devservices.container-env]`


[.description]
--
Environment variables that are passed to the container.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KAFKA_DEVSERVICES_CONTAINER_ENV+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KAFKA_DEVSERVICES_CONTAINER_ENV+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
